--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section id="nosotros">
         <h2>Sobre Nosotros</h2>
         <p>Somos una empresa dedicada a la producción de sobres de fruta pulverizada sin aditivos ni conservantes, contribuyendo a un mundo más saludable y sostenible.</p>
-        <img src="images/sostenibilidad.jpg" alt="Sostenibilidad">
+        <img src="images/sostenibilidad.jpg" alt="Sostenibilidad" class="soste">
     </section>
 
     <section id="productos">
