--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <p>Descubre una nueva forma de disfrutar la fruta con un producto saludable y sostenible.</p>
             <a href="#productos" class="btn">Ver Productos</a>
         </div>
+    </section>     
         <section id="nosotros">
             <h2>Sobre Nosotros</h2>
             <p>
